--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="th">
 <head>
   <meta charset="UTF-8">
@@ -8,44 +8,47 @@
 <body>
   <div class="container">
     <h2>ระบบจองห้องพักโรงแรม</h2>
-	
-	<form id="bookingForm">
-	<label>ชื่อลูกค้า:</label>
-	<input type="text" id="guestName" required>
-	
-	<label>ประเภทห้องพัก:</label>
-	<select id="roomtype" required>
-	<option value="">--เลือกห้อง--</option>
-	<option value="standard">800฿/คืน</option>
-	<option value="Deluxe">1,500฿/คืน</option>
-	<option value="Suite">2,500฿/คืน</option>
-	</select>
-	
-	<label>วันที่เข้าพัก:</label>
-	<input type="date" id="checkIn" required>
-	
-	<label>วันที่ออก:</label>
-	<input type="date" id="checkOut" required>
-	
-	<button type="submit">จองห้องพัก</button>
-   </form>
-	
-	<h3>รายการจองห้องพัก</h3>
-	<table id="bookingtable">
-	 <thead>
-	   <tr>
-	    <th>ลูกค้า</th>
-		<th>ประเภทห้อง</th>
-		<th>เช็คอิน</th>
-		<th>เช็คเอาท์</th>
-		<th>จำนวนคืน</th>
-		<th>ราคารวม</th>
-		<th>ยกเลิก</th>
-	  </tr>
-	 </thead>
-	<tbody></tbody>
-   </table>
+
+    <form id="bookingForm">
+      <label for="guestName">ชื่อลูกค้า:</label>
+      <input type="text" id="guestName" name="guestName" required>
+
+      <label for="roomType">ประเภทห้องพัก:</label>
+      <select id="roomType" name="roomType" required>
+        <option value="">--เลือกห้อง--</option>
+        <option value="standard" data-price="800">Standard - 800฿/คืน</option>
+        <option value="deluxe" data-price="1500">Deluxe - 1,500฿/คืน</option>
+        <option value="suite" data-price="2500">Suite - 2,500฿/คืน</option>
+      </select>
+
+      <label for="checkIn">วันที่เข้าพัก:</label>
+      <input type="date" id="checkIn" name="checkIn" required>
+
+      <label for="checkOut">วันที่ออก:</label>
+      <input type="date" id="checkOut" name="checkOut" required>
+
+      <button type="submit">จองห้องพัก</button>
+    </form>
+
+    <h3>รายการจองห้องพัก</h3>
+    <table id="bookingTable">
+      <thead>
+        <tr>
+          <th>ลูกค้า</th>
+          <th>ประเภทห้อง</th>
+          <th>เช็คอิน</th>
+          <th>เช็คเอาท์</th>
+          <th>จำนวนคืน</th>
+          <th>ราคารวม</th>
+          <th>ยกเลิก</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- รายการจองจะถูกเพิ่มที่นี่โดย JavaScript -->
+      </tbody>
+    </table>
   </div>
+
   <script src="app.js"></script>
 </body>
 </html>
